--- a/src/as/msoy.css
+++ b/src/as/msoy.css
@@ -511,7 +511,13 @@ TabNavigator, TabBar {
   downSkin: Embed(source="../../rsrc/media/skins/controlbar/send_down.png");
 }
 
-.controlBarButtonChat {
+/** All these buttons use the ImageButtonSkin and need the per-state skins cleared out. */
+.controlBarButtonChat, .controlBarButtonEdit, .controlBarButtonZoom, .controlBarButtonComment,
+.controlBarButtonInstructions, .controlBarButtonShare, .controlBarButtonScores,
+.controlBarButtonSnapshot, .controlBarFriendButton, .controlBarTalkButton,
+.controlBarIdleButton, .controlBarScaleButton, .controlBarAVRGButton, .tickButton,
+.controlBarButtonVolume0, .controlBarButtonVolume1, .controlBarButtonVolume2,
+.controlBarButtonVolume3, .controlBarButtonVolume4 {
   upSkin: ClassReference(null);
   downSkin: ClassReference(null);
   overSkin: ClassReference(null);
@@ -520,106 +526,54 @@ TabNavigator, TabBar {
   selectedOverSkin: ClassReference(null);
   selectedDownSkin: ClassReference(null);
   selectedDisabledSkin: ClassReference(null);
-
   skin: ClassReference("com.threerings.msoy.ui.ImageButtonSkin");
+}
+
+.controlBarButtonChat {
   image: Embed(source="../../rsrc/media/skins/controlbar/chatoptions.png");
 }
 
 .controlBarButtonEdit {
-  upSkin: ClassReference(null);
-  downSkin: ClassReference(null);
-  overSkin: ClassReference(null);
-  disabledSkin: ClassReference(null);
-  selectedUpSkin: ClassReference(null);
-  selectedOverSkin: ClassReference(null);
-  selectedDownSkin: ClassReference(null);
-  selectedDisabledSkin: ClassReference(null);
-
-  skin: ClassReference("com.threerings.msoy.ui.ImageButtonSkin");
   image: Embed(source="../../rsrc/media/skins/controlbar/editroom.png");
 }
 
-.controlBarButtonVolume {
-  upSkin: ClassReference(null);
-  downSkin: ClassReference(null);
-  overSkin: ClassReference(null);
-  disabledSkin: ClassReference(null);
-  selectedUpSkin: ClassReference(null);
-  selectedOverSkin: ClassReference(null);
-  selectedDownSkin: ClassReference(null);
-  selectedDisabledSkin: ClassReference(null);
+.controlBarButtonVolume0 {
+  image: Embed(source="../../rsrc/media/skins/controlbar/vol_01.png");
+}
 
-  skin: ClassReference("com.threerings.msoy.ui.ImageButtonSkin");
-  image: Embed(source="../../rsrc/media/skins/controlbar/volume.png");
+.controlBarButtonVolume1 {
+  image: Embed(source="../../rsrc/media/skins/controlbar/vol_02.png");
+}
+
+.controlBarButtonVolume2 {
+  image: Embed(source="../../rsrc/media/skins/controlbar/vol_03.png");
+}
+
+.controlBarButtonVolume3 {
+  image: Embed(source="../../rsrc/media/skins/controlbar/vol_04.png");
+}
+
+.controlBarButtonVolume4 {
+  image: Embed(source="../../rsrc/media/skins/controlbar/vol_05.png");
 }
 
 .controlBarButtonZoom {
-  upSkin: ClassReference(null);
-  downSkin: ClassReference(null);
-  overSkin: ClassReference(null);
-  disabledSkin: ClassReference(null);
-  selectedUpSkin: ClassReference(null);
-  selectedOverSkin: ClassReference(null);
-  selectedDownSkin: ClassReference(null);
-  selectedDisabledSkin: ClassReference(null);
-
-  skin: ClassReference("com.threerings.msoy.ui.ImageButtonSkin");
   image: Embed(source="../../rsrc/media/skins/controlbar/zoom.png");
 }
 
 .controlBarButtonComment {
-  upSkin: ClassReference(null);
-  downSkin: ClassReference(null);
-  overSkin: ClassReference(null);
-  disabledSkin: ClassReference(null);
-  selectedUpSkin: ClassReference(null);
-  selectedOverSkin: ClassReference(null);
-  selectedDownSkin: ClassReference(null);
-  selectedDisabledSkin: ClassReference(null);
-
-  skin: ClassReference("com.threerings.msoy.ui.ImageButtonSkin");
   image: Embed(source="../../rsrc/media/skins/controlbar/comment.png");
 }
 
 .controlBarButtonInstructions {
-  upSkin: ClassReference(null);
-  downSkin: ClassReference(null);
-  overSkin: ClassReference(null);
-  disabledSkin: ClassReference(null);
-  selectedUpSkin: ClassReference(null);
-  selectedOverSkin: ClassReference(null);
-  selectedDownSkin: ClassReference(null);
-  selectedDisabledSkin: ClassReference(null);
-
-  skin: ClassReference("com.threerings.msoy.ui.ImageButtonSkin");
   image: Embed(source="../../rsrc/media/skins/controlbar/instructions.png");
 }
 
 .controlBarButtonShare {
-  upSkin: ClassReference(null);
-  downSkin: ClassReference(null);
-  overSkin: ClassReference(null);
-  disabledSkin: ClassReference(null);
-  selectedUpSkin: ClassReference(null);
-  selectedOverSkin: ClassReference(null);
-  selectedDownSkin: ClassReference(null);
-  selectedDisabledSkin: ClassReference(null);
-
-  skin: ClassReference("com.threerings.msoy.ui.ImageButtonSkin");
   image: Embed(source="../../rsrc/media/skins/controlbar/share.png");
 }
 
 .controlBarButtonScores {
-  upSkin: ClassReference(null);
-  downSkin: ClassReference(null);
-  overSkin: ClassReference(null);
-  disabledSkin: ClassReference(null);
-  selectedUpSkin: ClassReference(null);
-  selectedOverSkin: ClassReference(null);
-  selectedDownSkin: ClassReference(null);
-  selectedDisabledSkin: ClassReference(null);
-
-  skin: ClassReference("com.threerings.msoy.ui.ImageButtonSkin");
   image: Embed(source="../../rsrc/media/skins/controlbar/score.png");
 }
 
@@ -628,100 +582,30 @@ TabNavigator, TabBar {
 }
 
 .controlBarButtonSnapshot {
-  upSkin: ClassReference(null);
-  downSkin: ClassReference(null);
-  overSkin: ClassReference(null);
-  disabledSkin: ClassReference(null);
-  selectedUpSkin: ClassReference(null);
-  selectedOverSkin: ClassReference(null);
-  selectedDownSkin: ClassReference(null);
-  selectedDisabledSkin: ClassReference(null);
-
-  skin: ClassReference("com.threerings.msoy.ui.ImageButtonSkin");
   image: Embed(source="../../rsrc/media/skins/controlbar/snapshot.png");
 }
 
 .controlBarFriendButton {
-  upSkin: ClassReference(null);
-  downSkin: ClassReference(null);
-  overSkin: ClassReference(null);
-  disabledSkin: ClassReference(null);
-  selectedUpSkin: ClassReference(null);
-  selectedOverSkin: ClassReference(null);
-  selectedDownSkin: ClassReference(null);
-  selectedDisabledSkin: ClassReference(null);
-
-  skin: ClassReference("com.threerings.msoy.ui.ImageButtonSkin");
   image: Embed(source="../../rsrc/media/skins/controlbar/friends.png");
 }
 
 .controlBarTalkButton {
-  upSkin: ClassReference(null);
-  downSkin: ClassReference(null);
-  overSkin: ClassReference(null);
-  disabledSkin: ClassReference(null);
-  selectedUpSkin: ClassReference(null);
-  selectedOverSkin: ClassReference(null);
-  selectedDownSkin: ClassReference(null);
-  selectedDisabledSkin: ClassReference(null);
-
-  skin: ClassReference("com.threerings.msoy.ui.ImageButtonSkin");
   image: Embed(source="../../rsrc/media/skins/controlbar/talk.png");
 }
 
 .controlBarIdleButton {
-  upSkin: ClassReference(null);
-  downSkin: ClassReference(null);
-  overSkin: ClassReference(null);
-  disabledSkin: ClassReference(null);
-  selectedUpSkin: ClassReference(null);
-  selectedOverSkin: ClassReference(null);
-  selectedDownSkin: ClassReference(null);
-  selectedDisabledSkin: ClassReference(null);
-
-  skin: ClassReference("com.threerings.msoy.ui.ImageButtonSkin");
   image: Embed(source="../../rsrc/media/skins/controlbar/idle.png");
 }
 
 .controlBarScaleButton {
-  upSkin: ClassReference(null);
-  downSkin: ClassReference(null);
-  overSkin: ClassReference(null);
-  disabledSkin: ClassReference(null);
-  selectedUpSkin: ClassReference(null);
-  selectedOverSkin: ClassReference(null);
-  selectedDownSkin: ClassReference(null);
-  selectedDisabledSkin: ClassReference(null);
-
-  skin: ClassReference("com.threerings.msoy.ui.ImageButtonSkin");
   image: Embed(source="../../rsrc/media/skins/controlbar/scale.png");
 }
 
 .controlBarAVRGButton {
-  upSkin: ClassReference(null);
-  downSkin: ClassReference(null);
-  overSkin: ClassReference(null);
-  disabledSkin: ClassReference(null);
-  selectedUpSkin: ClassReference(null);
-  selectedOverSkin: ClassReference(null);
-  selectedDownSkin: ClassReference(null);
-  selectedDisabledSkin: ClassReference(null);
-
-  skin: ClassReference("com.threerings.msoy.ui.ImageButtonSkin");
   image: Embed(source="../../rsrc/media/skins/controlbar/instructions.png");
 }
 
 .tickButton {
-  upSkin: ClassReference(null);
-  downSkin: ClassReference(null);
-  overSkin: ClassReference(null);
-  disabledSkin: ClassReference(null);
-  selectedUpSkin: ClassReference(null);
-  selectedOverSkin: ClassReference(null);
-  selectedDownSkin: ClassReference(null);
-  selectedDisabledSkin: ClassReference(null);
-
-  skin: ClassReference("com.threerings.msoy.ui.ImageButtonSkin");
   image: Embed(source="../../rsrc/media/skins/controlbar/tick.png");
 }
 
