Tweaked this short email a bit...

--- a/rsrc/email/blingCashOutNotice.tmpl
+++ b/rsrc/email/blingCashOutNotice.tmpl
@@ -1,4 +1,5 @@
-Player ${memberId} (${name})
+[Request] Player ${memberId} (${name})
 ${name} wants to cash out: ${url}
 
+---
 This is an automated mailing sent whenever a player requests to cash out Bling.
