- Added the user facing portion of underwire to allow user petitions under the "Contact Us" section on the "Help" page - Created a custom contact panel that only has the petition forms (not the FAQ section in the generic underwire user page) - Created a custon petition submision form that works for both logged in users and anonymous users - Detect and mark complaints against Guests (not that the support personel can really do anything about it) - Send whirled mail to users when support personel add a message to a petition

--- a/src/gwt/public/support/support.css
+++ b/src/gwt/public/support/support.css
@@ -92,3 +92,17 @@
 .uAccountPanel {
   width: 100%;
 }
+
+/** user.css overrides. */
+.uRegisterPetition {
+  width: 100%;
+}
+
+.uMyPetitionsPanel {
+  width: 100%;
+  margin-top: 10px;
+}
+
+.uMyPetitionsPanel .verticalPanel {
+  width: 100%;
+}
