Last minute UI tweaks to match Bill's item detail mockup

--- a/src/gwt/public/item/item.css
+++ b/src/gwt/public/item/item.css
@@ -82,6 +82,17 @@
   color: #000000;
 }
 
+.itemDetailPanel .Extras {
+  width: 100%;
+  margin-top: 10px;
+}
+
+.itemDetailPanel .remixLabel {
+  color: #56abd7;
+  font-weight: bold;
+  font-size: small;
+}
+
 .itemDetailPanel .gwt-Hyperlink {
   display: inline;
 }
