Put more of a gap between the buttons and notification area. Unfortunately we have this same gap even if the client is small and the buttons go into pop-up mode. Fucking flex. Unsavory suckings.

--- a/src/as/msoy.css
+++ b/src/as/msoy.css
@@ -1318,8 +1318,9 @@ BasePanel {
   horizontalGap: 0;
   verticalGap: 0;
   borderStyle: none;
-  paddingRight: 5px;
+  paddingRight: 10px;
   paddingBottom: 4px;
+  paddingLeft: 20px;
 }
 
 .notificationCanvas {
