Add sublinks to Transactions and Buy Bars under the relatively empty (until now) Shop tab.  Allow "external" style to be applied to action labels.

--- a/src/gwt/public/global/global.css
+++ b/src/gwt/public/global/global.css
@@ -25,7 +25,8 @@ a:visited {
   color: black;
 }
 
-a.external {
+a.external,
+div.external {
   background: url(/images/ui/external.png) center right no-repeat;
   padding-right: 16px;
 }
