Draw more attention to the fact that snaps are broken in FP10. And disable even trying to do it...

--- a/src/as/msoy.css
+++ b/src/as/msoy.css
@@ -920,6 +920,11 @@ BasePanel {
   disabledSkin: Embed(source="../../rsrc/media/skins/button/roomeditor/reset_rotation.png");
 }
 
+.attentionLabel {
+  fontWeight: "bold";
+  color: red;
+}
+
 .sliderPopup {
   backgroundSkin: Embed(source="../../rsrc/media/skins/controlbar/volume_background.png",
           scaleGridTop="1", scaleGridBottom="23",
