Freak not out if we ask for the profile of a non-existent member. Instead display a friendly error message. Also switched from VerticalPanel to FlowPanel. Tables--.

--- a/src/gwt/public/people/people.css
+++ b/src/gwt/public/people/people.css
@@ -8,6 +8,11 @@
   width: 100%;
 }
 
+.profile .Error {
+  padding: 15px;
+  font-size: 18px;
+}
+
 .profile .ProfileTongue .Content {
   border: none; /* override tongueBox */
 }
