Move scene snapshot code into SceneUtil and out of MediaUtil. Move duplicated live scene view code out of FeaturedWhirledPanel and WhirledDetailPanel and into SceneUtil. Other cleanery uppery along the wayery.

--- a/src/gwt/public/landing/landing.css
+++ b/src/gwt/public/landing/landing.css
@@ -318,8 +318,7 @@
   margin: 0;
 }
 
-.LandingPanel .FeaturedWhirled .LiveViewOverlay {
-  position: absolute;
+.LandingPanel .FeaturedWhirled .liveViewOverlay {
   top: 180px;
   left: 110px;
 }
