Changed things so that the creator of a scene view doesn't need to know about the vagaries of relative and absolute CSS positioning. In theory, you can just jam the returned widget into position anywhere and it will do the right thing.
Now I am praying to the Sweet Lord HTML Jesus that this works on IE. Please
have mercy on me HTML Jesus.

--- a/src/gwt/public/room/room.css
+++ b/src/gwt/public/room/room.css
@@ -4,7 +4,14 @@
  * CSS styles for the Room interfaces.
  */
 
-.liveViewOverlay {
+.sceneView {
+  position: relative;
+  width: 350px;
+  height: 200px;
+}
+
+.sceneView .LiveOverlay {
   position: absolute;
-  /* unfortunately instantiators have to add the correct top and left values */
+  top: 180px;
+  left: 112px;
 }
