--- a/src/gwt/public/whirleds/whirleds.css
+++ b/src/gwt/public/whirleds/whirleds.css
@@ -109,18 +109,12 @@
 }
 
 .whirledDetail .MainDetails .ScreenshotBox .Screenshot {
-  margin-top: 12px;
-  margin-bottom: 15px;
+  margin: 12px 25px 15px 25px;
 }
 
 /* adjust the flash box */
 .whirledDetail .MainDetails .ScreenshotBox .Screenshot .gwt-HTML {
   margin-left: 25px;
-}
-
-.whirledDetail .MainDetails .ScreenshotBox .liveViewOverlay {
-  left: 150px;
-  top: 192px;
 }
 
 .whirledDetail .MainDetails .ScreenshotBox .Online {
@@ -421,11 +415,6 @@
   height: 25px;
   padding-top: 5px;
   font-weight: bold;
-}
-
-.galaxy .FeaturedWhirled .liveViewOverlay {
-  top: 210px;
-  left: 380px;
 }
 
 .galaxy .FeaturedWhirled .FeaturedWhirledName {
