IE style fix: max-width applies after table cell widths have been calculated so cells will still be huge; use width instead.

--- a/src/gwt/public/shop/shop.css
+++ b/src/gwt/public/shop/shop.css
@@ -55,7 +55,7 @@
   font-weight: bold;
   white-space: nowrap;
   overflow: hidden;
-  max-width: 130px;
+  width: 130px;
 }
 
 .shopPanel .Creator {
