Use padding instead of a white border on TongueBox.

--- a/src/gwt/public/global/gwt.css
+++ b/src/gwt/public/global/gwt.css
@@ -323,7 +323,7 @@ img, embed, applet, object {
 }
 
 .tongueBox .Content {
-  border: white solid 10px;
+  padding: 10px;
 }
 
 .tongueBox .Footer {
