--- a/src/gwt/public/rooms/rooms.css
+++ b/src/gwt/public/rooms/rooms.css
@@ -4,6 +4,31 @@
  * CSS styles for the Room interfaces.
  */
 
+/* ROOMS PANEL */
+
+.roomsPanel {
+  width: 100%;
+  height: 100%;
+  background: #1D5884 url(/images/shop/background.png) repeat-x;
+}
+
+.roomsPanel .Intro {
+  color: #9FB2C0;
+  font-size: 14px;
+  padding-top: 5px;
+}
+
+.roomsPanel .Header {
+  width: 100%;
+  padding: 0 8px 24px;
+}
+
+.roomsPanel .marquee {
+  width: 260px;
+}
+
+/* ROOM DETAIL PANEL */
+
 .roomDetailPanel {
   width: 100%;
 }
