--- a/src/gwt/public/rooms/rooms.css
+++ b/src/gwt/public/rooms/rooms.css
@@ -8,7 +8,7 @@
 
 .roomsPanel {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   background: #1D5884 url(/images/shop/background.png) repeat-x;
 }
 
