Improvements for home page grid panel * Multiline text fields under icons, required cell size adjustments * Badge descriptions instead of names (left name as a translatable argument in case it is needed later) * Whirled tour always in top 3 unless member is already on tour * Label game, room and group items with verbs

--- a/src/as/world.mxml
+++ b/src/as/world.mxml
@@ -19,6 +19,7 @@
     [ResourceBundle("world")]
     [ResourceBundle("passport")]
     [ResourceBundle("studio")]
+    [ResourceBundle("homepagegrid")]
 </mx:Metadata>
 <mx:Script>
     <![CDATA[
